# advent-of-code

./: .gitignore
2019/day10/: day10.cabal
2019/day10/src/: Lib.hs
2019/day10/test/: Spec.hs
2019/day2/: README.md  day2.cabal
2019/day2/app/: Main.hs
2019/day2/src/: Lib.hs
2019/day3/: README.md  day3.cabal
2019/day3/app/: Main.hs
2019/day3/src/: Lib.hs
2019/day8/: day8.cabal
2019/day8/app/: Main.hs
2019/day8/src/: Lib.hs
2019/day8/test/: Spec.hs
aoc2020/: aoc2020.cabal  ghc.nix  hie.yaml  package.yaml  shell.nix
aoc2020/app/: Main.hs
aoc2020/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Parser.hs
aoc2021/: CHANGELOG.md  README.md  aoc2021.cabal  aoc2021.nix  default.nix  package.yaml  shell.nix
aoc2021/app/: Main.hs
aoc2021/src/: Aoc2021.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Debug.hs  Parser.hs
aoc2021/test/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Testing.hs
aoc2022/: LICENSE  aoc2022.cabal  aoc2022.nix  default.nix  flake.nix  hie.yaml  shell.nix
aoc2022/app/: main.hs
aoc2022/scripts/: setup  test  update
aoc2022/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Debug.hs  Parser.hs
aoc2022/src/Lib/: Stack.hs
aoc2022/test/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Testing.hs
aoc2022/test/Lib/: StackSpec.hs
aoc2023/: .gitignore  CHANGELOG.md  aoc2023.cabal  flake.nix
aoc2023/app/: Main.hs
aoc2023/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
aoc2023/test/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
aoc2024/: README.md  aoc2024.cabal  flake.nix
aoc2024/.github/workflows/: ci.yml
aoc2024/app/: Main.hs
aoc2024/src/: Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
aoc2024/test/: Day10Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
aoc2025/: .envrc  LICENSE  README.md  aoc2025.cabal  flake.nix
aoc2025/app/: Main.hs
aoc2025/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
aoc2025/test/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs
aoclib/: aoclib.cabal  flake.nix
aoclib/src/Data/Grid/: Rectangular.hs
aoclib/test/Data/Grid/: RectangularSpec.hs
