cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          James Santucci
maintainer:      james.santucci@gmail.com
copyright:       2023
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
        ghc-options: -Wall

library
        import:           warnings
        exposed-modules:
                Day1
                Day2
                Day3
                Day4
                Day6
                Day7
                Day8
        
        build-depends:
                , aoclib
                , base         ^>=4.17.2.1
                , containers
                , megaparsec
                , text
                , utf8-string
                , vector
                , word8
        
        hs-source-dirs:   src
        default-language: Haskell2010

executable aoc2023
        import:           warnings
        main-is:          Main.hs
        
        -- other-modules:
        -- other-extensions:
        build-depends:
                , aoc2023
                , aoclib
                , base                  ^>=4.17.2.1
                , bytestring
                , megaparsec
                , mtl
                , optparse-applicative
                , text
        
        hs-source-dirs:   app
        default-language: Haskell2010

test-suite aoc2023-test
        import:           warnings
        default-language: Haskell2010
        
        other-modules:
                Day1Spec
                Day2Spec
                Day3Spec
                Day4Spec
                Day6Spec
                Day7Spec
                Day8Spec
        
        type:             exitcode-stdio-1.0
        hs-source-dirs:   test
        main-is:          Spec.hs
        build-depends:
                , aoc2023
                , aoclib
                , base        ^>=4.17.2.1
                , bytestring
                , containers
                , hspec
                , megaparsec
                , raw-strings-qq
                , text
                , vector
