cabal-version: 3.0
name: aoc2024
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: James Santucci
maintainer: james.santucci@gmail.com
copyright: 2024
category: Game
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Lib

  build-depends:
    aoclib,
    base ^>=4.19,

  hs-source-dirs: src
  default-language: Haskell2010

executable aoc2024
  import: warnings
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    aoc2024,
    base ^>=4.19,
    optparse-applicative,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite aoc2024-test
  import: warnings
  default-language: Haskell2010
  other-modules:
    LibSpec

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    aoc2024,
    base ^>=4.19,
    hspec,
