cabal-version: 3.0
name: aoc2024
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: James Santucci
maintainer: james.santucci@gmail.com
copyright: 2024
category: Game
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Day2
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    Day10

  build-depends:
    aoclib,
    base ^>=4.19,
    containers,
    megaparsec,
    vector,

  hs-source-dirs: src
  default-language: Haskell2010

executable aoc2024
  import: warnings
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    aoc2024,
    aoclib,
    base ^>=4.19,
    bytestring,
    megaparsec,
    mtl,
    optparse-applicative,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite aoc2024-test
  import: warnings
  default-language: Haskell2010
  other-modules:
    Day2Spec
    Day3Spec
    Day4Spec
    Day5Spec
    Day6Spec
    Day7Spec
    Day8Spec
    Day9Spec
    Day10Spec

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    aoc2024,
    aoclib,
    base ^>=4.19,
    containers,
    hspec,
    megaparsec,
    raw-strings-qq,
    text,
    vector,
