cabal-version: 3.0
name: aoc2025
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: James Santucci
maintainer: james.santucci@gmail.com
copyright: 2025
category: Game
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Day1
    Day2

  build-depends:
    aoclib,
    base ^>=4.19,
    interval-index,
    megaparsec,

  hs-source-dirs: src
  default-language: Haskell2010

executable aoc2025
  import: warnings
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    aoc2025,
    aoclib,
    base ^>=4.19,
    bytestring,
    megaparsec,
    mtl,
    optparse-applicative,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite aoc2025-test
  import: warnings
  default-language: Haskell2010
  other-modules:
    Day1Spec
    Day2Spec

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    aoc2025,
    aoclib,
    base ^>=4.19,
    hspec,
    interval-index,
    megaparsec,
    raw-strings-qq,
    text,
