name:                day3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/day3#readme
license:             BSD3
license-file:        LICENSE
author:              James Santucci
maintainer:          james.santucci@gmail.com
copyright:           2019 James Santucci
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , containers
                     , transformers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable day3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , day3
                     , containers
                     , transformers
  default-language:    Haskell2010

test-suite day3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , day3
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/day3
